// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DarkModeSelector renders 1`] = `
<DocumentFragment>
  <button
    class="button"
    data-testid="dark-mode-selector-button"
    type="button"
  >
    <span>
      🌙 darkModeTurnOn
    </span>
  </button>
</DocumentFragment>
`;

exports[`DarkModeSelector renders for dark mode 1`] = `
<DocumentFragment>
  <button
    class="button"
    data-testid="dark-mode-selector-button"
    type="button"
  >
    <span>
      💡 darkModeTurnOff
    </span>
  </button>
</DocumentFragment>
`;
